# indexing_lab_2_part

./: CMakeLists.txt  conf.txt  lab.cpp  read_me.txt
